add get others' Posts controller
